--- a/registrationJS.html
+++ b/registrationJS.html
@@ -21,7 +21,7 @@
         var pwd =f2.password.value;
         if(pwd.length<=0)
         {
-            alert("enter full");
+            alert("entr full");
             f1.password.focus();
             return false;
 
